--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  scroll-behavior: smooth;
+@layer components {
+  html {
+    scroll-behavior: smooth;
+  }
 }
